# qEmby

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  linuxdo_post.md
installer/: release_notes_v0.0.2.md
src/qEmbyApp/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  qEmbyApp.rc
src/qEmbyApp/components/: addtoplaylistdialog.cpp  addtoplaylistdialog.h  adduserdialog.cpp  adduserdialog.h  adminusercard.cpp  adminusercard.h  cardcontextmenurequest.h  collapsiblesection.cpp  collapsiblesection.h  collectioncard.cpp  collectioncard.h  collectiongrid.cpp  collectiongrid.h  danmakuoptionslider.cpp  danmakuoptionslider.h  danmakuserverdialog.cpp  danmakuserverdialog.h  danmakuserverlistitemwidget.cpp  danmakuserverlistitemwidget.h  dashboardsectionorderstrip.cpp  dashboardsectionorderstrip.h  dashboardsectionorderwidget.cpp  dashboardsectionorderwidget.h  detailactionwidget.cpp  detailactionwidget.h  detailbottominfowidget.cpp  detailbottominfowidget.h  detailcontentwidget.cpp  detailcontentwidget.h  downloadmanagerdialog.cpp  downloadmanagerdialog.h  editablevaluelabel.cpp  editablevaluelabel.h  elidedlabel.cpp  elidedlabel.h  embycodecinfodialog.cpp  embycodecinfodialog.h  embycodecparametersdialog.cpp  embycodecparametersdialog.h  fetcherrowwidget.cpp  (+120 more)
src/qEmbyApp/managers/: downloadmanager.cpp  downloadmanager.h  externalplayerdetector.cpp  externalplayerdetector.h  externalplayeripc.cpp  externalplayeripc.h  languagemanager.cpp  languagemanager.h  logmanager.cpp  logmanager.h  playbackmanager.cpp  playbackmanager.h  searchhistorymanager.cpp  searchhistorymanager.h  thememanager.cpp  thememanager.h  traymanager.cpp  traymanager.h
src/qEmbyApp/resources/: resources.qrc
src/qEmbyApp/resources/html/: licenses.html
src/qEmbyApp/resources/i18n/: qEmby_zh_CN.ts
src/qEmbyApp/resources/qss/: dark-style.qss  light-style.qss
src/qEmbyApp/utils/: contextmenuutils.cpp  contextmenuutils.h  danmakuoptionutils.cpp  danmakuoptionutils.h  danmakurendererutils.cpp  danmakurendererutils.h  dashboardsectionorderutils.cpp  dashboardsectionorderutils.h  imageutils.cpp  imageutils.h  layoututils.cpp  layoututils.h  libraryoptionsserializer.cpp  libraryoptionsserializer.h  librarytypeprofile.cpp  librarytypeprofile.h  mediaidentifyutils.cpp  mediaidentifyutils.h  mediaitemutils.cpp  mediaitemutils.h  mediasourcepreferenceutils.cpp  mediasourcepreferenceutils.h  numberextractor.cpp  numberextractor.h  playerpreferenceutils.cpp  playerpreferenceutils.h  playlistutils.cpp  playlistutils.h  powerinhibitutils.cpp  powerinhibitutils.h  subtitleoptionutils.cpp  subtitleoptionutils.h  subtitlestyleutils.cpp  subtitlestyleutils.h  taskutils.cpp  taskutils.h  textwraputils.cpp  textwraputils.h
src/qEmbyApp/views/: baseview.cpp  baseview.h
src/qEmbyApp/views/admin/: activitylogdelegate.cpp  activitylogdelegate.h  librarycard.cpp  librarycard.h  librarygrid.cpp  librarygrid.h  managepagebase.cpp  managepagebase.h  manageview.cpp  manageview.h  nowplayingcard.cpp  nowplayingcard.h  pagecollections.cpp  pagecollections.h  pagedashboard.cpp  pagedashboard.h  pagelibraries.cpp  pagelibraries.h  pagelogs.cpp  pagelogs.h  pagetasks.cpp  pagetasks.h  pagetranscoding.cpp  pagetranscoding.h  pageusers.cpp  pageusers.h
src/qEmbyApp/views/media/: detailview.cpp  detailview.h  libraryview.cpp  libraryview.h  mediacarddelegate.cpp  mediacarddelegate.h  mediaitem.h  medialistmodel.cpp  medialistmodel.h  overviewdialog.cpp  overviewdialog.h  playerview.cpp  playerview.h  seasonview.cpp  seasonview.h
src/qEmbyApp/views/public/: loginview.cpp  loginview.h
src/qEmbyApp/views/search/: searchview.cpp  searchview.h
src/qEmbyApp/views/settings/: pageabout.cpp  pageabout.h  pageappearance.cpp  pageappearance.h  pagegeneral.cpp  pagegeneral.h  pagelibrary.cpp  pagelibrary.h  pageplayer.cpp  pageplayer.h  settingspagebase.cpp  settingspagebase.h  settingsview.cpp  settingsview.h
src/qEmbyApp/views/user/: categoryview.cpp  categoryview.h  dashboardview.cpp  dashboardview.h  favoritesview.cpp  favoritesview.h  homeview.cpp  homeview.h
src/qEmbyCore/: CMakeLists.txt  fileutils.cpp  fileutils.h  qEmbyCore_global.h  qembycore.cpp  qembycore.h
src/qEmbyCore/api/: apiclient.cpp  apiclient.h  embywebsocket.cpp  embywebsocket.h  networkmanager.cpp  networkmanager.h
src/qEmbyCore/config/: config_keys.h  configstore.cpp  configstore.h
src/qEmbyCore/models/admin/: adminmodels.h
src/qEmbyCore/models/danmaku/: danmakumodels.h
src/qEmbyCore/models/media/: mediaitem.cpp  mediaitem.h  playbackinfo.cpp  playbackinfo.h  playerlaunchcontext.h
src/qEmbyCore/models/profile/: serverprofile.h
src/qEmbyCore/services/admin/: adminservice.cpp  adminservice.h
src/qEmbyCore/services/auth/: authservice.cpp  authservice.h
src/qEmbyCore/services/danmaku/: dandanplayprovider.cpp  dandanplayprovider.h  danmakuasscomposer.cpp  danmakuasscomposer.h  danmakucachestore.cpp  danmakucachestore.h  danmakuservice.cpp  danmakuservice.h  danmakusettings.cpp  danmakusettings.h
src/qEmbyCore/services/manager/: servermanager.cpp  servermanager.h
src/qEmbyCore/services/media/: mediaservice.cpp  mediaservice.h
